--- a/CinemaApplication/CinemaApplication.Api/appsettings.json
+++ b/CinemaApplication/CinemaApplication.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=CinemaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
